2012-10-04  Simon Fraser  <simon.fraser@apple.com>

        Final part of "sync" to "flush" renaming
        https://bugs.webkit.org/show_bug.cgi?id=98430

        Reviewed by Tim Horton.

        Change method names on GraphicsLayer and GraphicsLayerClient that
        refer to "sync" to use the term "flush" instead, to be consistent
        with the rest of the code.

        * WebCoreSupport/PageClientQt.cpp:
        (WebCore::TextureMapperLayerClientQt::syncRootLayer):

2012-10-04  Simon Fraser  <simon.fraser@apple.com>

        Standardize on "flush" terminology for compositing layer flushing/syncing
        https://bugs.webkit.org/show_bug.cgi?id=98321

        Reviewed by Simon Fraser.

        Rename compositing-related methods that refer to "syncing" to instead
        refer to "flushing".

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::scheduleCompositingLayerFlush):
        * WebCoreSupport/ChromeClientQt.h:
        (ChromeClientQt):
        * WebCoreSupport/PageClientQt.cpp:
        (WebCore::PageClientQGraphicsWidget::syncLayers):

2012-10-03  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Enable mock scrollbars
        https://bugs.webkit.org/show_bug.cgi?id=98011

        Reviewed by Csaba Osztrogonác.

        Added helper to enable mock scrollbars.

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::enableMockScrollbars):
        * WebCoreSupport/DumpRenderTreeSupportQt.h:

2012-10-01  Brady Eidson  <beidson@apple.com>

        Remove the Safari 2 -> Safari 3 icon database import code.
        https://bugs.webkit.org/show_bug.cgi?id=98113

        Reviewed by Maciej Stachowiak.

        Nuke the performImport() IconDatabaseClient method.

        * WebCoreSupport/IconDatabaseClientQt.cpp:
        * WebCoreSupport/IconDatabaseClientQt.h:
        (IconDatabaseClientQt):

2012-09-28  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>
