@@ -1,3 +1,15 @@
+2012-10-05  Simon Hausmann  <simon.hausmann@digia.com>
+
+        [Qt] Remove dead code
+        https://bugs.webkit.org/show_bug.cgi?id=98491
+
+        Reviewed by Jocelyn Turcotte.
+
+        This code was added long time ago for a Symbian related project and is
+        not needed anymore.
+
+        * Api/qwebframe.cpp:
+
 2012-10-04  Simon Fraser  <simon.fraser@apple.com>
 
         Final part of "sync" to "flush" renaming
